<resources>
    <string name="app_name">Pitbull manager</string>
    <string name="title_active_login">Pitbull manager</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sin up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="title_activity_start_bar">StartBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="description">Descripción</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="description_active_login">Seleccione para iniciar la aplicación</string>
    <string name="student">estudiante</string>
    <string name="teacher">maestro</string>
    <string name="title_home">Inicio</string>
    <string name="title_chat">Chats</string>
    <string name="title_profile">Perfil</string>

    <string name="title_main">Lista de alumnos</string>
    <string name="sub_title_main">Administrar</string>
    <string name="belt">Cinta blanca</string>
    <string name="name_student">Nombre del estudiante</string>
    <string name="name_teacher">Nombre del maestro</string>
    <string name="title_class">Clases</string>
    <string name="title_student">Estudiantes</string>

    <string name="title_main_classes">Lista de clases</string>
    <string name="date">Fecha y hora</string>
    <string name="name_classes">Nombre de la clase</string>
    <string name="name_form">Nombre de la clase</string>
    <string name="student_form">Seleccionar estudiantes</string>
    <string name="date_form">Fecha</string>
    <string name="description_form">Descripcion de la actividad</string>
    <string name="action_form">Guardar</string>
    <string name="teacher_form">Nombre del maestro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_teacher_sing_up">Nombre completo</string>
    <string name="FirstNameStudent">Nombre</string>
    <string name="LastNameStudent">Apellidos</string>
    <string name="title_Pagos">Nombre del Pagos</string>
    <string name="title_main_pagos">Lista de pagos</string>
    <string name="Precio">Precio</string>
    <string name="Cantidad">Dinero</string>
    <string name="precio">Precio</string>
    <string name="name_pagos">Nombre del pago</string>
</resources>