<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/tkd"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_active_login"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/description_active_login"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/studentAppLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_buttom"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/student"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/teacherAppLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_buttom"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/teacher"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>