<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".teacher.AddPagosActivity">
<View
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@color/plum_700"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
<androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="120dp"
    app:cardCornerRadius="40dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/namePagosTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name_pagos"
            android:textColor="@color/black_500" />

        <EditText
            android:id="@+id/namePagosEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/namePagosTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints="@string/name_pagos"
            android:background="@drawable/ic_field"
            android:ems="80"
            android:hint="@string/name_pagos"
            android:inputType="textAutoComplete"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/precioTextView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/namePagosEditText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/precio"
            android:textColor="@color/black_500" />

        <EditText
            android:id="@+id/precioEditText"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_below="@+id/fechaTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/date_form"
            android:background="@drawable/ic_field"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="datetime"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fechaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/namePagosEditText"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/precioEditText"
            android:text="@string/date_form"
            android:textColor="@color/black_500" />

        <EditText
            android:id="@+id/fechaEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/fechaTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/precioTextView"
            android:autofillHints=""
            android:background="@drawable/ic_field"
            android:ems="10"
            android:hint="@string/date_form"
            android:inputType="textUri|text|datetime"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/teacherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/precioEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/teacher_form"
            android:textColor="@color/black_500" />

        <EditText
            android:id="@+id/teacherEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/teacherTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints="@string/name_teacher"
            android:background="@drawable/ic_field"
            android:ems="80"
            android:hint="@string/name_teacher"
            android:inputType="textAutoComplete"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/studentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacherEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/student_form"
            android:textColor="@color/black_500" />

        <EditText
            android:id="@+id/studentEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/studentTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints="@string/student_form"
            android:background="@drawable/ic_field"
            android:ems="260"
            android:gravity="clip_vertical"
            android:hint="@string/student_form"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="12"
            android:minLines="6"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_below="@+id/studentEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_btn"
            android:gravity="center"
            android:text="@string/action_form"
            android:textColor="@color/white"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>